// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`sc-customer-lastname Logged In Checkout last name provided with URL Params 1`] = `
<sc-customer-lastname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="last_name" disabled="" help="" name="last_name" type="text" value="CheckoutLast"></sc-input>
  </mock:shadow-root>
</sc-customer-lastname>
`;

exports[`sc-customer-lastname Logged In Checkout last name provided without URL Params 1`] = `
<sc-customer-lastname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="last_name" disabled="" help="" name="last_name" type="text" value="CheckoutLast"></sc-input>
  </mock:shadow-root>
</sc-customer-lastname>
`;

exports[`sc-customer-lastname Logged In Customer and Checkout last name provided with URL Params 1`] = `
<sc-customer-lastname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="last_name" disabled="" help="" name="last_name" type="text" value="CustomerLast"></sc-input>
  </mock:shadow-root>
</sc-customer-lastname>
`;

exports[`sc-customer-lastname Logged In Customer and Checkout last name provided without URL Params 1`] = `
<sc-customer-lastname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="last_name" disabled="" help="" name="last_name" type="text" value="CustomerLast"></sc-input>
  </mock:shadow-root>
</sc-customer-lastname>
`;

exports[`sc-customer-lastname Logged In Customer last name provided with URL Params 1`] = `
<sc-customer-lastname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="last_name" disabled="" help="" name="last_name" type="text" value="CustomerLast"></sc-input>
  </mock:shadow-root>
</sc-customer-lastname>
`;

exports[`sc-customer-lastname Logged In Customer last name provided without URL Params 1`] = `
<sc-customer-lastname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="last_name" disabled="" help="" name="last_name" type="text" value="CustomerLast"></sc-input>
  </mock:shadow-root>
</sc-customer-lastname>
`;

exports[`sc-customer-lastname Logged Out Checkout last name provided with URL Params 1`] = `
<sc-customer-lastname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="last_name" help="" name="last_name" type="text" value="UrlLast"></sc-input>
  </mock:shadow-root>
</sc-customer-lastname>
`;

exports[`sc-customer-lastname Logged Out Checkout last name provided without URL Params 1`] = `
<sc-customer-lastname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="last_name" help="" name="last_name" type="text" value="CheckoutLast"></sc-input>
  </mock:shadow-root>
</sc-customer-lastname>
`;

exports[`sc-customer-lastname Logged Out Customer and Checkout last name provided with URL Params 1`] = `
<sc-customer-lastname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="last_name" help="" name="last_name" type="text" value="UrlLast"></sc-input>
  </mock:shadow-root>
</sc-customer-lastname>
`;

exports[`sc-customer-lastname Logged Out Customer and Checkout last name provided without URL Params 1`] = `
<sc-customer-lastname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="last_name" help="" name="last_name" type="text" value="CheckoutLast"></sc-input>
  </mock:shadow-root>
</sc-customer-lastname>
`;

exports[`sc-customer-lastname Logged Out Customer last name provided with URL Params 1`] = `
<sc-customer-lastname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="last_name" help="" name="last_name" type="text" value="UrlLast"></sc-input>
  </mock:shadow-root>
</sc-customer-lastname>
`;

exports[`sc-customer-lastname Logged Out Customer last name provided without URL Params 1`] = `
<sc-customer-lastname size="medium">
  <mock:shadow-root>
    <sc-input autocomplete="last_name" help="" name="last_name" type="text" value="CustomerLast"></sc-input>
  </mock:shadow-root>
</sc-customer-lastname>
`;
